--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <html>
   <head>
     <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.css' />
+    <link rel='stylesheet' href='/angularjs-toaster/toaster.css' />
+    <link rel='stylesheet' href='/angular-ui-bootstrap/dist/ui-bootstrap-csp.css'></link>
     <script src='/angular/angular.js'></script>
     <script src='/angular-ui-router/release/angular-ui-router.js'></script>
+    <script src='/angularjs-toaster/toaster.js'></script>
+    <script src='/angular-animate/angular-animate.js'></script>
+    <script src='/angular-ui-bootstrap/dist/ui-bootstrap.js'></script>
+    <script src='/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js'></script>
     <script src='/browser/app.js'></script>
+    <script src='/browser/generator.js'></script>
   </head>
   <body ng-app='app'>
+    <toaster-container toaster-options="{'time-out': 1000}"></toaster-container>
     <div class='container'>
       <h1>Angular Application Generator</h1>
       <ul class='nav nav-tabs' style='margin-bottom:10px'>
