--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src='/angular-animate/angular-animate.js'></script>
     <script src='/angular-ui-bootstrap/dist/ui-bootstrap.js'></script>
     <script src='/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js'></script>
+    <script src='/dest/bundle.js'></script>
     <script src='/browser/app.js'></script>
     <script src='/browser/generator.js'></script>
   </head>
