--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Angular Application Generator</title>
     <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.css' />
     <link rel='stylesheet' href='/angularjs-toaster/toaster.css' />
     <link rel='stylesheet' href='/angular-ui-bootstrap/dist/ui-bootstrap-csp.css'></link>
