--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.css' />
     <link rel='stylesheet' href='/angularjs-toaster/toaster.css' />
     <link rel='stylesheet' href='/angular-ui-bootstrap/dist/ui-bootstrap-csp.css'></link>
+    <link rel='stylesheet' href='/highlightjs/styles/github.css'></link>
     <script src='/angular/angular.js'></script>
     <script src='/angular-ui-router/release/angular-ui-router.js'></script>
     <script src='/angularjs-toaster/toaster.js'></script>
     <script src='/angular-animate/angular-animate.js'></script>
     <script src='/angular-ui-bootstrap/dist/ui-bootstrap.js'></script>
     <script src='/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js'></script>
+    <script src='/highlightjs/highlight.pack.js'></script>
+    <script src='/angular-highlightjs/angular-highlightjs.js'></script>
     <script src='/dest/bundle.js'></script>
     <script src='/browser/app.js'></script>
     <script src='/browser/generator.js'></script>
