start pulling out generators

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src='/dest/bundle.js'></script>
     <script src='/browser/app.js'></script>
     <script src='/browser/generator.js'></script>
+    <script src='/browser/navGenerator.js'></script>
   </head>
   <body ng-app='app'>
     <toaster-container toaster-options="{'time-out': 1000}"></toaster-container>
