--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <script src='/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js'></script>
     <script src='/highlightjs/highlight.pack.js'></script>
     <script src='/angular-highlightjs/angular-highlightjs.js'></script>
+    <script src='/angular-sanitize/angular-sanitize.js'></script>
+    <script src='/tv4/tv4.js'></script>
+    <script src='/objectpath/lib/ObjectPath.js'></script>
+    <script src='/angular-schema-form/dist/schema-form.js'></script>
+    <script src='/angular-schema-form/dist/bootstrap-decorator.js'></script>
     <script src='/dest/bundle.js'></script>
     <script src='/browser/app.js'></script>
     <script src='/browser/generator.js'></script>
