handling multiple models

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src='/browser/app.js'></script>
     <script src='/browser/generator.js'></script>
     <script src='/browser/navGenerator.js'></script>
+    <script src='/browser/modelGenerator.js'></script>
+    <script src='/browser/modelGenerators.js'></script>
   </head>
   <body ng-app='app'>
     <toaster-container toaster-options="{'time-out': 1000}"></toaster-container>
